<resources>

    <string name="app_name">ContactTool</string>
    <string name="cc_contacts">ContactsContract.Contacts</string>
    <string name="cc_raw_contacts">ContactsContract.RawContacts</string>
	<string name="cc_data">ContactsContract.Data</string>
	
	<string name="logcat">LogCat</string>
	<string name="listview">ListView</string>
	<string name="delete">Delete all</string>
	
	<string name="not_implemented">Not implemented</string>
	<string name="no_result">No Result</string>
	
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	<string name="delete_contacts">Delete all contacts?</string>
	<string name="delete_raw_contacts">Delete raw contacts?</string>
	<string name="delete_data">Delete data?</string>
	
	<string name="delete_all">This will really delete the whole contact table!!!</string>
	
</resources>
