<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
    	<TextView
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/cc_contacts"
    		android:textSize="20sp"	/>
    	<Button
    	    android:id="@+id/contacts_logcat"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/logcat" />
    	<Button
    	    android:id="@+id/contacts_listview"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/listview" />
    	<Button
    	    android:id="@+id/contacts_delete"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/delete" />
    	
    	
    	<TextView
	        android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/cc_raw_contacts"
    		android:textSize="20sp" />
    	<Button
    	    android:id="@+id/rawcontacts_logcat"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/logcat" />
    	<Button
    	    android:id="@+id/rawcontacts_listview"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/listview" />
    	<Button
    	    android:id="@+id/rawcontacts_delete"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/delete" />
    	
    	
    	<TextView
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/cc_data"
    		android:textSize="20sp"	/>
    	<Button
    	    android:id="@+id/data_logcat"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/logcat" />
    	<Button
    	    android:id="@+id/data_listview"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/listview" />
    	<Button
    	    android:id="@+id/data_delete"
    	    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/delete" />
    	
	</LinearLayout>
</ScrollView>
